# package-manager-feeds

./: README.md
package-feed-relink-tool/: README.md  pyproject.toml
package-feed-relink-tool/package_feed_relink_tool/: package_feed_relink.py
package-feed-updater/: .gitignore  README.md  pyproject.toml
package-feed-updater/package_feed_updater/: package_feed_updater.py
package-feeds/all/: Packages  Packages.stamps
