[tool.poetry]
name = "package-feed-updater"
version = "0.1.0"
description = ""
authors = ["Jack Arnold <jack.arnold@ni.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
click = "^8.1.7"
pyinstaller = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
